--- a/Franklin_garcia_lab8/Lab8/VoiceRecognizer/nbproject/project.properties
+++ b/Franklin_garcia_lab8/Lab8/VoiceRecognizer/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=VoiceRecognizerLP
+application.vendor=xyto_
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,14 +25,27 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Franklin_garcia_lab8.jar
+dist.jar=${dist.dir}/VoiceRecognizerLP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.Lab8-VoiceRecognizer=Lab8\\VoiceRecognizer
+file.reference.bridj-0.7-20131007.003529-54.jar=bridj-0.7-20131007.003529-54.jar
+file.reference.cgjsapi.jar=C:\\Users\\xyto_\\Downloads\\Talkinjava\\talkingJava\\cgjsapi.jar
+file.reference.cgjsapi.jar-1=cgjsapi.jar
+file.reference.slf4j-api-1.7.2.jar=slf4j-api-1.7.2.jar
+file.reference.sqljdbc42.jar=sqljdbc42.jar
+file.reference.TalkingJavaSDK-170.jar=TalkingJavaSDK-170.jar
+file.reference.webcam-capture-0.3.10-RC6.jar=webcam-capture-0.3.10-RC6.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
-    ${file.reference.Lab8-VoiceRecognizer}
+    ${file.reference.cgjsapi.jar}:\
+    ${file.reference.TalkingJavaSDK-170.jar}:\
+    ${file.reference.cgjsapi.jar-1}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.bridj-0.7-20131007.003529-54.jar}:\
+    ${file.reference.slf4j-api-1.7.2.jar}:\
+    ${file.reference.webcam-capture-0.3.10-RC6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +70,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=franklin_garcia_lab8.Franklin_garcia_lab8
+main.class=VoiceRecognizer.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
